style.css
html{
    box-sizing: border-box;
}

body {
    margin: 0
}

.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 16px;
    background-color: #1f2937;    
}

.logo {
    align-self: center;
    margin-left: 8px;
    font-size: 24px;
    color: #f9f1f8;
    margin-left: 200px
    
}

ul {
    list-style: none;
    display: flex;
    margin: 8px;
    padding: 0;
    gap: 32px;
    color: #E5E7EB;
    font-size: 18px; 
    margin-right: 200px;
}

.start {
    display: flex;
    background-color: #1f2937;
    justify-content: space-between;   
    padding: 100px 200px 100px 200px;
}

.left {
    display: flex;
    flex: 1;
    flex-direction: column;
    max-width: 800px;
}

.right {
    display: flex;
    flex: 1;
    justify-content: center;
    align-items: center;
    background-color: lightgrey;
}

header {
    font-size: 48px;
    font-weight: bold;
    color: #f9faf8    
}

P {
    font-size: 18px;
    color: #E5E7EB
}

button {
    align-self: flex-start;
    padding: 12px;
    background-color: #3882f6;
    color: #E5E7EB;
    border: none;
    border-radius: 8px;
    font-weight: bold;
    padding-left: 30px;
    padding-right: 30px
}

.cabeza {
    text-align: center;
    font-size: 36px;
    font-weight: bold;
    color: #1f2937;
    padding: 40px
}

.squares {
    display: flex;
    padding: 50px 200px 50px 200px;
    gap:15px;
    justify-content: center;
}

.cuadro {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.algo {   
    width: 250px;
    height: 250px;
    border-radius: 15px;
    border-color: blue;
    border-width: 3px;
    border-style: solid;
    margin-bottom: 15px
}

.text {
    text-align: center;
    margin-right: 56px;
    margin-left: 56px
}

.quotes {
    background-color: #E5E7EB;
    padding: 100px 200px 100px 200px;
    max-width: 100%
}

.quotes p {
    font-size: 36px;
    font-style: light italic;
    color: #1f2937;
    text-align: center;
}

.quotes h1 {
    text-align: end;
}

.calltoaction {
    display: flex;
    justify-content: space-around;
    align-items: center;
    background-color: #3882f6;
    flex: 1;
    border-radius: 10px;
    height: 250px;

}

.cta {
    display: flex;
    padding: 200px;    
 
}

.boton button {
    border-style: solid;
    border-color: white;
    border-radius: 10px;
    border-width: 3px;
    padding: 0px 60px 0px 60px
}

.itstime h1 {
    color: white
}

.itstime p {
    font-size: 20px;
}

button p {
    font-size: 24px
}

.footer {
    display: flex;
    background-color: #1f2937;
    justify-content: center;
    align-items: center;
    padding: 50px
}

